# finetuning

./: callbacks.py  collator.py  config.py  eval_log.jsonl  finetune.py  generate.py  interact.py  plot.py  pyproject.toml  train.py
