[project]
name = "finetuning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.13.0",
    "datasets>=4.8.5",
    "matplotlib>=3.10.9",
    "plotly>=6.8.0",
    "torch>=2.12.0",
    "transformers>=5.9.0",
]
